Tue Feb  3 19:27:16 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* common.mk (ruby-glommed.o): dependency on $(OBJ) should be written
	  in common.mk (in which OBJ is defined) because of Makefile include
	  and parse order. This partly reverts r49419.
	  [ruby-dev:48849] [Bug #10808]

	* Makefile.in (ruby-glommed.o): ditto.

	* Makefile.in (ruby-glommed.o): remove excess $(DTRACE_OBJ) because
	  it is included in $(OBJS) since r49451.

	* Makefile.in (probes.o): should depend on $(DTRACE_DEPENDENT_OBJS)

Tue Feb  3 17:15:45 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (try_cppflags, try_cflags, try_ldflags): get rid of
	  interference by modifying global variables in have_devel? method.
	  [ruby-core:67962] [Bug #10821]

Tue Feb  3 15:23:58 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_method.c (remove_method): When remove refined
	  method, raise a NameError if the method is not
	  defined in refined class.

	  But if the method is defined in refined class,
	  it should keep refined method and remove original
	  method.

	  Patch by Seiei Higa. [ruby-core:67722] [Bug #10765]

Tue Feb  3 14:04:47 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): obtain real name with FindFirstFile API
	  instead of matching all entries, on Windows.
	  [ruby-core:67954] [Bug #10819]

Tue Feb  3 12:26:35 2015  Katsuhiko Nishimra  <ktns.87@gmail.com>

	* lib/mkmf.rb (configuration): set the default cxxflags, which is
	  referred from the default CXXFLAGS, for extension libraries.
	  [Fix GH-823]

Tue Feb  3 05:52:00 2015  Aman Gupta <ruby@tmm1.net>

	* gc.c (rb_objspace_free): cause rb_bug if lazy sweep is in progress
	  during rb_objspace_free. Adds extra protection for r46340.
	  Patch by Vicent Marti. [Bug #10768] [ruby-core:67734]
	* gc.c (rb_objspace_call_finalizer): Ensure GC is completed after
	  finalizers have run. We already call gc_rest() before invoking
	  finalizers, but finalizer can allocate new objects and start new GC