@@ -1,3 +1,8 @@
+Wed Feb  4 11:12:43 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* Makefile.in (probes.stamp): rebuild dtrace dependent objects
+	  only when `dtrace -G` modifies its input files.
+
 Tue Feb  3 19:27:16 2015  Naohisa Goto  <ngotogenome@gmail.com>
 
 	* common.mk (ruby-glommed.o): dependency on $(OBJ) should be written
